# daavfx_trading_dashboard

./: .gitignore  ENTROPY_AUDIT_REPORT.md  LEGENDARY_FEATURES.md  LICENSE  MT4_CONNECTION_GUIDE.md  MT4_CONTROL_PLANE.md  README.md  VISUAL_CHAT_IMPROVEMENTS.md  build_log.txt  build_log_full.txt  build_nsis.txt  build_release.bat  dashboard_dev.bat  direct_download_server.py  eslint.config.js  generate_full_export.py  generate_massive_setfile.py  generate_massive_setfile_v19.py  generate_now.bat  issues.md  massive-setfile-generator.html  package-lock.json  package.json  run-tests.ts  tsconfig.app.tsbuildinfo  vite.config.ts  vite.config.ts.timestamp-1766270540215-6985e2fa1f10b.mjs  vite.config.ts.timestamp-1769292137351-b478b70db09a8.mjs
Vault_Presets/: MASSIVE_DAAVILEFX_COMPLETE_v18.set  MASSIVE_DAAVILEFX_COMPLETE_v19.set
logic-canvas-main/: .env.example  .gitignore  eslint.config.js  package-lock.json
logic-canvas-main/scripts/: cleanup.ps1  verify_exporter.ts
logic-canvas-main/src-tauri/: build.rs  tauri.conf.json
src/: main.tsx
src-tauri/: Cargo.toml  build_log.txt  stress_test.ps1  stress_test_results_20251220_133029.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: mt-bridge.toml
src-tauri/src/: enhanced_risk_manager.rs  lib.rs  mql_compiler.rs  mt_bridge.rs  setfile_parser.rs  tactical_bridge.rs
src-tauri/tests/snapshots/: semantic_tests__disable_hedge.snap.new  semantic_tests__make_aggressive.snap.new  semantic_tests__make_conservative.snap.new  semantic_tests__set_lot_002.snap.new
src/components/: ConsoleOverlay.tsx
src/hooks/: useCollaboration.ts  useMTConfig.ts  useMTFileOps.ts  useMemorySystem.ts  useSelectionManager.ts  (+3 more)
(+294 files in other folders)
